Fix grid height within viewport
Fix the height of the grid so that it always fits perfectly
within the height of the viewport, and does not trigger the need
for a scrollbar in the browser.

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ table {
 }
 
 body {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
